--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
       <div class="element">
         <h3>This is text for a div element</h3>
       </div>
-      <div class="element" style="background-color: pink">
+      <!-- giving div id seven to change on css -->
+      <div class="element" id="seven">
         <h3>This is text for a div element</h3>
       </div>
-      <div class="element" style="background-color: yellow">
+      <div class="element" id="eight">
         <h3>This is text for a div element</h3>
       </div>
-      <div class="element" style="background-color: orange">
+      <div class="element" id="nine">
         <h3>This is text for a div element</h3>
       </div>
     </section>
